--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1182,7 +1182,7 @@ ol {
 	-webkit-box-align: center;
 	-ms-flex-align: center;
 	align-items: center;
-	height: 51px;
+	/*height: 51px;*/
 }
 
 .footer__about {
