updated home page

--- a/src/pages/signin/SignIn.css
+++ b/src/pages/signin/SignIn.css
@@ -63,10 +63,10 @@
     width: 100px;
     }
     
-    .login_btn:hover{
+    /* .login_btn:hover{
     color: black;
     background-color: white;
-    }
+    } */
     
     .links{
     color: rgb(27, 26, 26);
